# fluvial-particle-examples

./: .gitattributes  .gitignore  LICENSE  README.md  _quarto.yml  api.qmd  environment.yml  index.qmd  pyproject.toml
data/: index.qmd
data/grids/FaSTMECH_straight/: Result_straight_2d_1.vts  Result_straight_3d_1.vts
data/grids/nays2dplus_straight_time_average/: Result_2D_time_average.vts  Result_3D_time_average.vts
examples/: index.qmd
examples/3d_tracking/: vertical_mixing.qmd
examples/basic/: meandering_river.qmd  options_file.qmd  quickstart.qmd  straight_channel.qmd
examples/time_varying/: unsteady_flow.qmd
examples/visualization/: paraview.qmd  python_viz.qmd  pyvista_intro.qmd
getting-started/: index.qmd  interactive-notebooks.qmd  user-environment.qmd
